# NCRenamer

./: .coverage  .gitignore  .pre-commit-config.yaml  4037-92.NC  LICENSE.txt  Makefile  README.md  app.py  architecture  build.bat  build.ps1  build_wsl.sh  email_bug_tracker.py  file_version_info.txt  history.json  main.py  material.xls  nc_formatter.py  password.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  translations.py
.hypothesis/constants/: 2347adbc2dd67e0f  2f885e880d0104f4  67b0a8ccf18bf5d2  a799a3dbd71c051a  da39a3ee5e6b4b0d  df0b9b77c5968901
CNCs/: .~lock.laser.xls#  0002-00.NC  0003-00.NC  0004-00.NC  4037-92.NC  4039-100.NC  4039-101.NC  4039-95.NC  4039-96.NC  4039-97.NC  4039-98.NC  4039-99.NC  4040-01.NC  4040-02.NC  4040-03.NC  4040-04.NC  4040-05.NC  4041-07.NC  4043-10.NC  4044-13.NC  4046-15.NC  4046-16.NC  4046-17.NC  4046-18.NC  4049-22.NC  4049-23.NC  4049-25.NC  4049-26.NC  4052-28.NC  4052-31.NC  4052-34.NC  4052-35.NC  4053-35.NC  4053-36.NC  4055-39.NC  4058-42.NC  laser.xls  materials_new.csv
CNCs/TESTOVACI PROGRAM/: 6684-01.NC  6684-02.NC  6684-03.NC  6684-04.NC  6684-32.SCH  6684-97.NC  6684-98.NC  6684-99.NC
CNCs/for_renamer/: .~lock.laser.xls#  6670-18.NC  6670-18.SCH  laser.xls
Downloads/NCRenamer-refactor-project-structure/: setup.cfg
NCRenamer-refactor-project-structure/: app.py  requirements.txt
NCRenamer-refactor-project-structure/CNCs/: 4039-97.NC  4039-99.NC  4040-04.NC  4041-06.NC  4042-07.NC  4042-08.NC  4044-11.NC  4044-12.NC  4047-19.NC  4049-24.NC  4049-27.NC  4052-29.NC  4052-30.NC  4052-33.NC  4053-37.NC  4054-38.NC  materials_new.csv
app/: version.py
app/burn_table/: __init__.py  __main__.py  _burn_table_settings.json  main.py
app/models/: email_bug_tracker_model.py  email_model.py  formatter_model.py  material_repository.py  part_storage_repository.py  password_model.py  settings_model.py  todo_repository.py
app/services/: email_service.py  nc_formatter.py  nc_service.py  settings_service.py  update_checker.py
app/translations/: translations.py
app/utils/: bootstrap.py  file_watcher.py  resource_path.py  shared_storage.py  window_utils.py  workspace.py
app/viewmodels/: add_material_view_model.py  email_bug_tracker_view_model.py  email_service.py  main_view_model.py  materials_view_model.py  part_storage_view_model.py  password_view_model.py  (+2 more)
hanpari/: basic_functionality.py  special_cases.csv
img/: nc_renamer.ico:Zone.Identifier
materials/: materials.json
resources/: app_settings.json
shared/: materials.json  part_storage.json
special_cases/: find_special_cases.py  special_cases.csv
tests/: conftest.py  test_nc_formatter.py  test_nc_renamer.py
todo/: todo.json
(+91 files in other folders)
